infra/keycloak/02-keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: default
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: default
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:19.0.1
        args: [
          "start",
          "--db=postgres",
          "--db-password=$(KEYCLOAK_DB_PASSWORD)",
          "--db-username=$(KEYCLOAK_DB_USERNAME)",
          "--db-url=jdbc:postgresql://lab-keycloak-db.default:5432/keycloak",
          "--features=scripts",
          "--health-enabled=true",
          "--metrics-enabled=true",
        ]
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
